dmoz-0.1/textgarden/TextGardenLib/TextGardenLib.h

DLLExport char* Url_GetHostNm(int UrlId);
DLLExport char* Url_GetDmNm(int UrlId, int MxDmSegs=-1);
DLLExport char* Url_GetPortStr(int UrlId);
DLLExport int Url_GetPortN(int UrlId);
DLLExport char* Url_GetPathStr(int UrlId);
DLLExport int Url_GetPathSegs(int UrlId);
DLLExport char* Url_GetPathSeg(int UrlId, int PathSegN);
DLLExport char* Url_GetSearchStr(int UrlId);
DLLExport char* Url_GetFragIdStr(int UrlId);
/////////////////////////////////////////////////
// Http-Response
DLLExport int HttpResp_GetFromStr(char* HttpRespStr);
DLLExport int HttpResp_GetFromFile(char* HttpRespFNm);
DLLExport void HttpResp_Del(int HttpRespId);
DLLExport bool HttpResp_IsOk(int HttpRespId);
DLLExport int HttpResp_Len(int HttpRespId);
DLLExport char* HttpResp_GetHdStr(int HttpRespId);
DLLExport int HttpResp_GetBodyAsMem(int HttpRespId);
DLLExport char* HttpResp_GetBodyAsStr(int HttpRespId);
DLLExport int HttpResp_GetStatusCd(int HttpRespId);
DLLExport bool HttpResp_IsStatusCd_Ok(int HttpRespId);
DLLExport bool HttpResp_IsStatusCd_Redir(int HttpRespId);
DLLExport char* HttpResp_GetReasonPhrase(int HttpRespId);
DLLExport int HttpResp_GetFlds(int HttpRespId);
DLLExport char* HttpResp_GetFldNm(int HttpRespId, int FldN);
DLLExport char* HttpResp_GetFldVal(int HttpRespId, int FldN);
DLLExport bool HttpResp_IsFldNm(int HttpRespId, char* FldNm);
DLLExport char* HttpResp_GetFldValByNm(int HttpRespId, char* FldNm);
DLLExport bool HttpResp_IsFldVal(int HttpRespId, char* FldNm, char* FldVal);
/////////////////////////////////////////////////
// Html
DLLExport int HtmlDoc_GetFromStr(char* HtmlStr);
DLLExport int HtmlDoc_GetFromFile(char* HtmlFNm);
DLLExport void HtmlDoc_Del(int HtmlDocId);
DLLExport int HtmlDoc_GetToks(int HtmlDocId);
DLLExport int HtmlDoc_GetTokSym(int HtmlDocId, int TokN);
DLLExport char* HtmlDoc_GetTokStr(int HtmlDocId, int TokN);
DLLExport char* HtmlDoc_GetTokFullStr(int HtmlDocId, int TokN);
DLLExport bool HtmlDoc_IsTokArg(int HtmlDocId, int TokN, char* ArgNm);
DLLExport char* HtmlDoc_GetTokArg(int HtmlDocId, int TokN, char* ArgNm, char* DfArgVal);
DLLExport bool HtmlDoc_IsTokUrl(int HtmlDocId, int TokN);
DLLExport char* HtmlDoc_GetTokUrlStr(int HtmlDocId, int TokN);
DLLExport bool HtmlDoc_IsBreakTag(char* TagNm);
DLLExport char* HtmlDoc_GetSymStr(int Sym);
/////////////////////////////////////////////////
// Web-Page
DLLExport int WebPg_Fetch(char* UrlStr);
DLLExport void WebPg_Del(int WebPgId);
DLLExport int WebPg_GetUrls(int WebPgId);
DLLExport char* WebPg_GetUrl(int WebPgId, int UrlN=0);
DLLExport int WebPg_GetHttpResp(int WebPgId);
DLLExport int WebPg_GetOutUrlStrV(int WebPgId);
/////////////////////////////////////////////////
// Web-Crawler
//$ creates & returns handle to crawler
DLLExport int Crawler_Gen();
//$ deletes crawler with handle CrawlerId
DLLExport void Crawler_Del(int CrawlerId);
//$ adds start-url StartUrlStr to crawler with handle CrawlerId
DLLExport void Crawler_AddStartUrlStr(int CrawlerId, char* StartUrlStr);
//$ sets maximal number of urls MxUrls to crawler with handle CrawlerId
DLLExport void Crawler_PutMxUrls(int CrawlerId, int MxUrls);
//$ sets maximal number of connections MxUrls to crawler with handle CrawlerId
DLLExport void Crawler_PutMxConns(int CrawlerId, int MxConns);
DLLExport void Crawler_PutMnConns(int CrawlerId, int MnConns);
DLLExport void Crawler_PutMxConnsPerSrv(int CrawlerId, int MxConnsPerSrv);
DLLExport void Crawler_PutAfterFetchDelay(int CrawlerId, int AfterFetchDelaySecs);
DLLExport void Crawler_PutMxLev(int CrawlerId, int MxLev);
DLLExport void Crawler_PutMxDep(int CrawlerId, int MxDep);
DLLExport void Crawler_PutMnQLen(int CrawlerId, int MnQLen);
DLLExport void Crawler_PutQResetMod(int CrawlerId, int QResetMod);
DLLExport void Crawler_PutMxContLen(int CrawlerId, int MxContLen);
DLLExport void Crawler_PutMxRetries(int CrawlerId, int MxRetries);
DLLExport void Crawler_PutMxQSegLen(int CrawlerId, int MxQSegLen);
DLLExport void Crawler_PutRevisitSecs(int CrawlerId, int RevisitSecs);
DLLExport void Crawler_PutRedirDmAllowed(int CrawlerId, bool RedirDmAllowedP);
DLLExport void Crawler_AddRqDmNm(int CrawlerId, char* RqDmNmV);
DLLExport void Crawler_AddRqContTypeNm(int CrawlerId, char* ContTypeNm);
DLLExport void Crawler_AddBadFExt(int CrawlerId, char* FExt);
DLLExport void Crawler_OptHtmlCrawling(int CrawlerId);
DLLExport void Crawler_DefCrawlBs(int CrawlerId,
 char* CrawlBsNm, char* CrawlBsFPath,
 char* CrawlBsFAccessNm, int CrawlBsMxSegLen);
//$ starts crawler with handle CrawlerId
DLLExport void Crawler_StartCrawling(int CrawlerId);
/////////////////////////////////////////////////
// DMoz-Base
DLLExport int DMoz_GetCategories(
 int BowDocBsId, int BowDocWgtBsId, int BowDocPartId,
 char* QueryStr, int MxCats);
DLLExport int DMoz_GetKeywords(
 int BowDocBsId, int BowDocWgtBsId, int BowDocPartId,
 char* QueryStr, int MxCats, double KWordTsh);
/////////////////////////////////////////////////
// Blob-Pointer
//$ creates and returns handle to blob-base pointer
DLLExport int BlobPt_New();
//$ deletes blob-base pointer with handle BlobPtId
DLLExport void BlobPt_Del(int BlobPtId);
/////////////////////////////////////////////////
// Crawl-Base
//$ opens crawl-base with filename CrawlBsFNm and returns handle to CrawlBs object
DLLExport int CrawlBs_Open(char* CrawlBsFNm);
//$ closes crawl-base with handle CrawlBsId
DLLExport void CrawlBs_Close(int CrawlBsId);
//$ positions & returns traverse-pointer to crawl-base with handle CrawlBsId on-to the first crawl record
DLLExport int CrawlBs_FFirstBlobPt(int CrawlBsId);
//$ positions traverse-pointer TrvBlobPtId to crawl-base with handle CrawlBsId on-to the next crawl record and returns handle BlobPtId to current crawl record
DLLExport bool CrawlBs_FNextBlobPt(int CrawlBsId, int TrvBlobPtId, int BlobPtId);
//$ returns date-time string from crawl-base with handle CrawlBsId from record under handle BlobPtId
DLLExport char* CrawlBs_GetDateTimeStr(int CrawlBsId, int BlobPtId);
//$ returns url string from crawl-base with handle CrawlBsId from record under handle BlobPtId
DLLExport char* CrawlBs_GetUrlStr(int CrawlBsId, int BlobPtId);
//$ returns handle to http-response from crawl-base with handle CrawlBsId from record under handle BlobPtId
DLLExport int CrawlBs_GetHttpResp(int CrawlBsId, int BlobPtId);
/////////////////////////////////////////////////
// Blob-Base
DLLExport int BlobBs_Open(char* BlobBsFNm, int BlobBsFAccess);
DLLExport void BlobBs_Close(int BlobBsId);
DLLExport int BlobBs_GetFAccessCreate();
DLLExport int BlobBs_GetFAccessUpdate();
DLLExport int BlobBs_GetFAccessReadOnly();
DLLExport int BlobBs_FFirstBlobPt(int BlobBsId);
DLLExport bool BlobBs_FNextBlobPt(int BlobBsId, int TrvBlobPtId, int BlobPtId);
DLLExport void BlobBs_AddBlob(int BlobBsId, int MemId, int BlobPtId);
DLLExport void BlobBs_PutBlob(int BlobBsId, int MemId, int BlobPtId);
DLLExport void BlobBs_GetBlob(int BlobBsId, int BlobPtId, int MemId);
DLLExport void BlobBs_DelBlob(int BlobBsId, int BlobPtId);
/////////////////////////////////////////////////
// Compact-Document
DLLExport int CpDoc_Load(int SInId);
DLLExport void CpDoc_Save(int CpDocId, int SOutId);
DLLExport int CpDoc_New();
DLLExport void CpDoc_Del(int CpDocId);