dmoz-0.1/textgarden/TextGardenLib/NetTextGardenLib.cs


         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetHostNm(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetDmNm(int UrlId, int MxDmSegs);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetPortStr(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern int Url_GetPortN(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetPathStr(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern int Url_GetPathSegs(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetPathSeg(int UrlId, int PathSegN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetSearchStr(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr Url_GetFragIdStr(int UrlId);

         [DllImport("TextGardenLib.dll")]
         public static extern int HttpResp_GetFromStr(String HttpRespStr);

         [DllImport("TextGardenLib.dll")]
         public static extern int HttpResp_GetFromFile(String HttpRespFNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void HttpResp_Del(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HttpResp_IsOk(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern int HttpResp_Len(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HttpResp_GetHdStr(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern int HttpResp_GetBodyAsMem(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HttpResp_GetBodyAsStr(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern int HttpResp_GetStatusCd(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HttpResp_IsStatusCd_Ok(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HttpResp_IsStatusCd_Redir(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HttpResp_GetReasonPhrase(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern int HttpResp_GetFlds(int HttpRespId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HttpResp_GetFldNm(int HttpRespId, int FldN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HttpResp_GetFldVal(int HttpRespId, int FldN);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HttpResp_IsFldNm(int HttpRespId, String FldNm);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HttpResp_GetFldValByNm(int HttpRespId, String FldNm);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HttpResp_IsFldVal(int HttpRespId, String FldNm, String FldVal);

         [DllImport("TextGardenLib.dll")]
         public static extern int HtmlDoc_GetFromStr(String HtmlStr);

         [DllImport("TextGardenLib.dll")]
         public static extern int HtmlDoc_GetFromFile(String HtmlFNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void HtmlDoc_Del(int HtmlDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern int HtmlDoc_GetToks(int HtmlDocId);

         [DllImport("TextGardenLib.dll")]
         public static extern int HtmlDoc_GetTokSym(int HtmlDocId, int TokN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HtmlDoc_GetTokStr(int HtmlDocId, int TokN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HtmlDoc_GetTokFullStr(int HtmlDocId, int TokN);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HtmlDoc_IsTokArg(int HtmlDocId, int TokN, String ArgNm);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HtmlDoc_GetTokArg(int HtmlDocId, int TokN, String ArgNm, String DfArgVal);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HtmlDoc_IsTokUrl(int HtmlDocId, int TokN);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HtmlDoc_GetTokUrlStr(int HtmlDocId, int TokN);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool HtmlDoc_IsBreakTag(String TagNm);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr HtmlDoc_GetSymStr(int Sym);

         [DllImport("TextGardenLib.dll")]
         public static extern int WebPg_Fetch(String UrlStr);

         [DllImport("TextGardenLib.dll")]
         public static extern void WebPg_Del(int WebPgId);

         [DllImport("TextGardenLib.dll")]
         public static extern int WebPg_GetUrls(int WebPgId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr WebPg_GetUrl(int WebPgId, int UrlN);

         [DllImport("TextGardenLib.dll")]
         public static extern int WebPg_GetHttpResp(int WebPgId);

         [DllImport("TextGardenLib.dll")]
         public static extern int WebPg_GetOutUrlStrV(int WebPgId);

         [DllImport("TextGardenLib.dll")]
         public static extern int Crawler_Gen();

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_Del(int CrawlerId);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_AddStartUrlStr(int CrawlerId, String StartUrlStr);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxUrls(int CrawlerId, int MxUrls);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxConns(int CrawlerId, int MxConns);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMnConns(int CrawlerId, int MnConns);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxConnsPerSrv(int CrawlerId, int MxConnsPerSrv);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutAfterFetchDelay(int CrawlerId, int AfterFetchDelaySecs);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxLev(int CrawlerId, int MxLev);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxDep(int CrawlerId, int MxDep);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMnQLen(int CrawlerId, int MnQLen);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutQResetMod(int CrawlerId, int QResetMod);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxContLen(int CrawlerId, int MxContLen);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxRetries(int CrawlerId, int MxRetries);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutMxQSegLen(int CrawlerId, int MxQSegLen);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutRevisitSecs(int CrawlerId, int RevisitSecs);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_PutRedirDmAllowed(int CrawlerId, bool RedirDmAllowedP);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_AddRqDmNm(int CrawlerId, String RqDmNmV);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_AddRqContTypeNm(int CrawlerId, String ContTypeNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_AddBadFExt(int CrawlerId, String FExt);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_OptHtmlCrawling(int CrawlerId);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_DefCrawlBs(int CrawlerId, String CrawlBsNm, String CrawlBsFPath, String CrawlBsFAccessNm, int CrawlBsMxSegLen);

         [DllImport("TextGardenLib.dll")]
         public static extern void Crawler_StartCrawling(int CrawlerId);

         [DllImport("TextGardenLib.dll")]
         public static extern int DMoz_GetCategories(int BowDocBsId, int BowDocWgtBsId, int BowDocPartId, String QueryStr, int MxCats);

         [DllImport("TextGardenLib.dll")]
         public static extern int DMoz_GetKeywords(int BowDocBsId, int BowDocWgtBsId, int BowDocPartId, String QueryStr, int MxCats, double KWordTsh);

         [DllImport("TextGardenLib.dll")]
         public static extern int BlobPt_New();

         [DllImport("TextGardenLib.dll")]
         public static extern void BlobPt_Del(int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern int CrawlBs_Open(String CrawlBsFNm);

         [DllImport("TextGardenLib.dll")]
         public static extern void CrawlBs_Close(int CrawlBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern int CrawlBs_FFirstBlobPt(int CrawlBsId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool CrawlBs_FNextBlobPt(int CrawlBsId, int TrvBlobPtId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CrawlBs_GetDateTimeStr(int CrawlBsId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern IntPtr CrawlBs_GetUrlStr(int CrawlBsId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern int CrawlBs_GetHttpResp(int CrawlBsId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BlobBs_Open(String BlobBsFNm, int BlobBsFAccess);

         [DllImport("TextGardenLib.dll")]
         public static extern void BlobBs_Close(int BlobBsId);

         [DllImport("TextGardenLib.dll")]
         public static extern int BlobBs_GetFAccessCreate();

         [DllImport("TextGardenLib.dll")]
         public static extern int BlobBs_GetFAccessUpdate();

         [DllImport("TextGardenLib.dll")]
         public static extern int BlobBs_GetFAccessReadOnly();

         [DllImport("TextGardenLib.dll")]
         public static extern int BlobBs_FFirstBlobPt(int BlobBsId);

         [DllImport("TextGardenLib.dll")]
         [return:MarshalAs(UnmanagedType.I1)]
         public static extern bool BlobBs_FNextBlobPt(int BlobBsId, int TrvBlobPtId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BlobBs_AddBlob(int BlobBsId, int MemId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BlobBs_PutBlob(int BlobBsId, int MemId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BlobBs_GetBlob(int BlobBsId, int BlobPtId, int MemId);

         [DllImport("TextGardenLib.dll")]
         public static extern void BlobBs_DelBlob(int BlobBsId, int BlobPtId);

         [DllImport("TextGardenLib.dll")]
         public static extern int CpDoc_Load(int SInId);

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_Save(int CpDocId, int SOutId);

         [DllImport("TextGardenLib.dll")]
         public static extern int CpDoc_New();

         [DllImport("TextGardenLib.dll")]
         public static extern void CpDoc_Del(int CpDocId);
